Update storage to support Attribute